# open-api-maker

./: .gitignore  justfile  pyproject.toml  requirements.txt
src/: main.py  swagger_types.py
src/tests/: test_main.py
test_files/: swagger.yaml
